syntax = "proto3";

//会导致什么变化  要和 intrv1共同联动
package intr.v1;

option go_package = "intr/v1;intrv1";



service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc CancelLike(CancelLikeRequest)  returns (CancelLikeResponse);
  rpc Collect(CollectRequest)   returns (CollectResponse);
  rpc Get(GetRequest) returns (GetResponse);
  // 找出热榜列表的互动数据
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}
message GetByIdsRequest{
  string biz = 1;
  repeated int64 ids = 2;

}
message GetByIdsResponse {
  map<int64, Interactive> Intrs = 1;
}


message GetRequest{
  string biz = 1;
  int64 bizid = 2;
  int64 uid = 3;
}
//注意
message GetResponse {
  Interactive intr = 1;
}
message Interactive {
  //还多加了biz
  string biz = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64  like_cnt = 4;
  int64 collect_cnt = 5;
  bool  liked = 6;
  bool  collected = 7;
}
message CollectRequest{
  string biz = 1;
  int64 bizId = 2;
  int64 cid = 3;
  int64 uid = 4;
}
message CollectResponse {

}

message CancelLikeRequest {
  string biz = 1;
  int64 bizId = 2;
  int64 uid = 3;
}
message CancelLikeResponse {

}

message IncrReadCntRequest{
  string biz = 1;
  int64 bizId = 2;
}

message IncrReadCntResponse {

}

message LikeRequest{
  string biz = 1;
  int64 bizId = 2;
  int64 uid = 3;
}

message LikeResponse{

}
